# ms-notify

./: .env.example  .gitignore  CODE_DIFF.md  Cargo.toml  Dockerfile  MIGRATION_PLAN.md  deploy.sh  docker-compose.yml
.aiproject/: P6-deploy.md
src/: config.rs  error.rs  main.rs  router.rs
src/adapters/: dingding.rs  email.rs  feishu.rs  mod.rs  sender.rs  sms.rs  wechat.rs
src/handlers/: channels.rs  mod.rs  notification.rs
src/kafka/: handler.rs  mod.rs
src/models/: channel.rs  message.rs  mod.rs  notification.rs
